1.0.2 2022xxxx
  BF: Build: Correction of the release info process
  BF: Launcher: Correction of the behavior when the screen resolution changes
      Triggers the update of the user interface.
  CR: Launcher: Scaling of icons depending on screen resolution
      for aesthetic reasons
  
1.0.1 20220401
  BF: Build: Correction of the version number
      Release date was not set correctly.
  BF: Build: Optimization of the release info process
  BF: Build: Optimization of the build process

1.0.0 20220325
  NT: Release is available